commands work but loaditemordered is broken